Mahout Change Log

Release 1.0 - unreleased

  MAHOUT-1467: ClusterClassifier readPolicy leaks file handles (Avi Shinnar, smarthi)

  MAHOUT-1466: Cluster visualization fails to execute (ssc)
  
  MAHOUT-1465: Clean up README (akm)

  MAHOUT-1463: Modify OnlineSummarizers to use the TDigest dependency from Maven Central (tdunning, smarthi)

  MAHOUT-1460: Remove reference to Dirichlet in ClusterIterator (frankscholten)

  MAHOUT-1459: Move Hadoop related code out of CanopyClusterer (frankscholten)

  MAHOUT-1458: Remove KMeansConfigKeys and FuzzyKMeansConfigKeys (frankscholten)

  MAHOUT-1457: Move EigenSeedGenerator into spectral kmeans package (frankscholten)

  MAHOUT-1455: Forkcount config causes JVM crashes during build (frankscholten)

  MAHOUT-1451: Cleaning up the examples for clustering on the website (Gaurav Misra via ssc)

  MAHOUT-1449: Update the Known Issues in Random Forests Page (Manoj Awasthi via ssc)

  MAHOUT-1448: In Random Forest, the training does not support multiple input files. The input dataset must be one single file. (Manoj Awasthi via ssc)

  MAHOUT-1447: ImplicitFeedbackAlternatingLeastSquaresSolver tests and features (Adam Ilardi via ssc)

  MAHOUT-1438: "quickstart" tutorial for building a simple recommender (Maciej Mazur and Steve Cook via ssc)

  MAHOUT-1434: Dead links on the web ste (Kevin Moulart, smarthi)

  MAHOUT-1433: Make SVDRecommender look at all unknown items of a user per default (ssc)

  MAHOUT-1429: Parallelize YtransposeY in ImplicitFeedbackAlternatingLeastSquaresSolver (Adam Ilardi via ssc)

  MAHOUT-1419: Random decision forest is excessively slow on numeric features (srowen)

  MAHOUT-1417: Random decision forest implementation fails in Hadoop 2 (srowen)

  MAHOUT-1416: Make access of DecisionForest.read(dataInput) less restricted (Manoj Awasthi via smarthi)
  
  MAHOUT-1415: Clone method on sparse matrices fails if there is an empty row which has not been set explicitly (till.rohrmann via ssc)
