@@ -1,0 +1,3 @@
+hadoop-simple {
+  com.sun.security.auth.module.UnixLoginModule required ;
+}
